samples/_failures_safe/1761262647_685f77_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a4d39184.c: In function ‘main’:
./samples/SAFE/__tmp_a4d39184.c:152:5: error: expected expression at end of input
  152 |     print_matrix(&
      |     ^~~~~~~~~~~~
./samples/SAFE/__tmp_a4d39184.c:152:5: error: expected declaration or statement at end of input
